--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1 class="heading">Welcome Github Project</h1>
+   <h2 class="heading"> Welcome Bangladesh </h2>
+
+   <h3>Hello</h3>
 
 </body>
 </html>
